feat(exhibition)：修正展示朝向同步与配置界面渲染。